--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+allure-pytest==2.14.3
+allure-python-commons==2.14.3
 attrs==25.3.0
 certifi==2025.4.26
 h11==0.16.0
+helium==5.1.1
 idna==3.10
 iniconfig==2.1.0
 outcome==1.3.0.post0
@@ -9,6 +12,7 @@ pluggy==1.6.0
 Pygments==2.19.1
 PySocks==1.7.1
 pytest==8.4.0
+pytest_failed_screenshot==1.0.2
 selenium==4.33.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
